Bug 57317 - Writer FILESAVE: bullets list saved as numbered list (in specific ODT)
Summary: Writer FILESAVE: bullets list saved as numbered list (in specific ODT)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2012-11-20 11:00 UTC by sasha.libreoffice
Modified: 2022-08-23 02:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test case for demonstrating problems with saving list (12.18 KB, application/vnd.oasis.opendocument.text)
2012-11-20 11:00 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2012-11-20 11:00:04 UTC
Created attachment 70304 [details]
test case for demonstrating problems with saving list

Problem: when I change list to bullets list and save, it becomes numbered

Steps to reproduce:
0. Open attachment in Writer
1. Select all items of numbered list and change to Bullets using button "Bullets On/Off" on toolbar or by press Shift-F12. List becomes bulletted.
2. Save
3. File->Reload
Expected: list remains bulletted
Actually: list becomes numbered

Reproduced in 3.4.2 on Windows XP 32 bit and in 3.6.3 on RFR 17 64 bit

Observation: msWord 2007 opens list as numbered. Therefore I guess that problem appears during saving. Calligra Words and Ocular also opens as numbered.

Workaround: use Format->Bullets and numbering for changing format of list
Comment 1 A (Andy) 2013-04-19 21:43:47 UTC Comment hidden (me-too)
Comment 2 tommy27 2013-08-31 20:09:50 UTC
still reproducible with LO 4.1.1.2 (Win7 Pro, 64bit)
Comment 3 A (Andy) 2015-02-13 12:13:46 UTC
Reproducible with LO 4.4.0.3, Win 8.1
Comment 4 QA Administrators 2016-02-21 08:34:31 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2017-03-06 14:54:54 UTC Comment hidden (obsolete)
Comment 6 Zineta 2018-10-01 12:06:58 UTC
Still reproducible with attached document in:
Version: 6.2.0.0.alpha0+ (x64)
Build ID: 8b1501d80dc9d3f42c351c6e026fa737e116cae5
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-09-22_23:19:22
Locale: bs-BA (bs_BA); Calc: threaded

Also in:LO 3.3.0 and OOo 3.3.0.

Tested in new document in all versions saving bulleted list seems OK.
Comment 7 Timur 2019-09-10 11:23:57 UTC Comment hidden (obsolete)
Comment 8 Justin L 2021-05-15 08:50:03 UTC
repro 7.2+.
A named list (L1) becomes an automatic list (right?) when changing to bullets. So it seems like export doesn't really recognize that change.

I was not able to reproduce this with a brand new document either (comment 6)
Comment 9 Justin L 2022-08-19 19:17:09 UTC
On a brand new document, the definition of the list is saving into content.xml.

With this document, there is an L1 list style in styles.xml, and then when you change to bullet, it is saving that bullet list as a conflicting L1 in content.xml.
Comment 10 Commit Notification 2022-08-23 02:10:20 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/46dc9f3bbac67e9240adc44ab017f905482ef786

tdf#57317 odf export: avoid autolist conflict with NumberingStyles

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.