tdf#57317 odf export: avoid autolist conflict with NumberingStyles

Somehow you can have autoStyles writing into the styles.xml.
Well, the code to prevent duplicates for that needs to exist
for autoStyles written into document.xml as well.

Change-Id: I9602b7023a1ef009ad644374dc5081afb8a76916