include/xmloff/xmlnume.hxx
@@ -63,9 +63,7 @@ public:
             const css::uno::Reference< css::container::XIndexReplace > & xNumRule,
             bool bOutline=false );
 
-    void exportStyles( bool bUsed,
-                       XMLTextListAutoStylePool *pPool,
-                       bool bExportChapterNumbering );
+    void exportStyles(bool bUsed, bool bExportChapterNumbering);
     void exportNumberingRule(
             const OUString& rName, bool bIsHidden,
             const css::uno::Reference< css::container::XIndexReplace > & xNumRule );
