xmloff/source/style/xmlnume.cxx
@@ -782,9 +782,7 @@ void SvxXMLNumRuleExport::exportOutline()
     }
 }
 
-void SvxXMLNumRuleExport::exportStyles( bool bUsed,
-                                        XMLTextListAutoStylePool *pPool,
-                                        bool bExportChapterNumbering )
+void SvxXMLNumRuleExport::exportStyles( bool bUsed, bool bExportChapterNumbering )
 {
     if( bExportChapterNumbering )
         exportOutline();
@@ -821,11 +819,8 @@ void SvxXMLNumRuleExport::exportStyles( bool bUsed,
         xStyles->getByIndex( i ) >>= xStyle;
 
         if( !bUsed || xStyle->isInUse() )
-        {
             exportStyle( xStyle );
-            if( pPool )
-                pPool->RegisterName( xStyle->getName() );
-        }
+
     }
 }
 
